--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- HTML Meta Tags -->
-  <title>Hangman.io | Guess letters to reveal hidden words from various categories. With only eight chances, can you
-    beat the clock and win? Fun and educational for all ages!</title>
+  <title>Hangman | Test your word skills by guessing letters to reveal hidden words across multiple categories! With just eight chances on the clock, can you beat the game? Fun, fast, and educational for all ages!</title>
   <meta name="description"
     content="Guess letters to reveal hidden words from various categories. With only eight chances, can you beat the clock and win? Fun and educational for all ages! - meviru/hangman.io">
 
