--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
   <!-- HTML Meta Tags -->
   <title>Hangman | Test your word skills by guessing letters to reveal hidden words across multiple categories! With just eight chances on the clock, can you beat the game? Fun, fast, and educational for all ages!</title>
   <meta name="description"
-    content="Guess letters to reveal hidden words from various categories. With only eight chances, can you beat the clock and win? Fun and educational for all ages! - meviru/hangman.io">
+    content="Test your word skills by guessing letters to reveal hidden words across multiple categories! With just eight chances on the clock, can you beat the game? Fun, fast, and educational for all ages! - kirangandhi97/hangman">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://github.com/meviru/hangman.io">
+  <meta property="og:url" content="https://github.com/kirangandhi97/hangman">
   <meta property="og:type" content="website">
   <meta property="og:title"
-    content="Hangman.io | Guess letters to reveal hidden words from various categories. With only eight chances, can you beat the clock and win? Fun and educational for all ages!">
+    content="Hangman | Test your word skills by guessing letters to reveal hidden words across multiple categories! With just eight chances on the clock, can you beat the game? Fun, fast, and educational for all ages!">
   <meta property="og:description"
-    content="Guess letters to reveal hidden words from various categories. With only eight chances, can you beat the clock and win? Fun and educational for all ages! - meviru/hangman.io">
+    content="Test your word skills by guessing letters to reveal hidden words across multiple categories! With just eight chances on the clock, can you beat the game? Fun, fast, and educational for all ages! - kirangandhi97/hangman">
   <meta property="og:image"
     content="https://repository-images.githubusercontent.com/823593407/29f317d5-eccf-414c-9360-7f83334aa1b5">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="github.com">
-  <meta property="twitter:url" content="https://github.com/meviru/hangman.io">
+  <meta property="twitter:url" content="https://github.com/kirangandhi97/hangman">
   <meta name="twitter:title"
-    content="Hangman.io | Guess letters to reveal hidden words from various categories. With only eight chances, can you beat the clock and win? Fun and educational for all ages!">
+    content="Hangman | Test your word skills by guessing letters to reveal hidden words across multiple categories! With just eight chances on the clock, can you beat the game? Fun, fast, and educational for all ages!">
   <meta name="twitter:description"
-    content="Guess letters to reveal hidden words from various categories. With only eight chances, can you beat the clock and win? Fun and educational for all ages! - meviru/hangman.io">
+    content="Test your word skills by guessing letters to reveal hidden words across multiple categories! With just eight chances on the clock, can you beat the game? Fun, fast, and educational for all ages! - kirangandhi97/hangman">
   <meta name="twitter:image"
     content="https://repository-images.githubusercontent.com/823593407/29f317d5-eccf-414c-9360-7f83334aa1b5">
 
